Fixed product link images for light/dark mode

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -2,6 +2,22 @@
     display: flex;
 }
 
+.visible-when-dark:is(html:not([classi~="dark"]) *) {
+    display: none;
+}
+
+.visible-when-dark:is(html[class~="dark"] *) {
+    display: block;
+}
+
+.visible-when-light:is(html:not([class~="dark"]) *) {
+    display: block;
+}
+
+.visible-when-light:is(html[class~="dark"] *) {
+    display: none;
+}
+
 .countdown > div {
     flex: 1; /* makes all 4 divs equal width */
     border: 1px solid #000; /* optional, just to show the div boundaries */
@@ -13,6 +29,7 @@
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    justify-items: center;
 }
 
 .product-quantities {
@@ -25,8 +42,8 @@
     border: 2px solid #AAAAAA;
     border-radius: 25px;
     margin: 10px;
-    min-width: 250px;
-    max-width: 150px;
+    min-width: 150px;
+    max-width: 350px;
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
@@ -45,6 +62,7 @@
 .product-image img {
     margin-top: 0px;
     border-radius: 0px;
+    width: 100%;
 }
 
 .product-details {
